Add NMR jupyter notebook

--- a/docs/source/user_guide/CCS.ipynb
+++ b/docs/source/user_guide/CCS.ipynb
@@ -23,7 +23,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "1f4a0528",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1421,7 +1423,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "d7d92f92",
    "metadata": {},
