Update load funcs in user guide examples

--- a/docs/source/user_guide/CCS.ipynb
+++ b/docs/source/user_guide/CCS.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "import isicle\n",
     "\n",
-    "geom = isicle.io.load('dimethylglycine.mol')\n",
+    "geom = isicle.load('dimethylglycine.mol')\n",
     "geom = geom.initial_optimize(embed=True)"
    ]
   },
@@ -88,7 +88,7 @@
     }
    ],
    "source": [
-    "adducts = isicle.io.load('ccs_adducts.joblib')\n",
+    "adducts = isicle.load('ccs_adducts.joblib')\n",
     "adducts.adducts[0].mol"
    ]
   },
@@ -157,7 +157,7 @@
     }
    ],
    "source": [
-    "conformers = isicle.io.load('ccs_conformers.joblib')\n",
+    "conformers = isicle.load('ccs_conformers.joblib')\n",
     "conformers"
    ]
   },
@@ -268,7 +268,7 @@
     }
    ],
    "source": [
-    "dfts = isicle.io.load('ccs_dft.joblib')\n",
+    "dfts = isicle.load('ccs_dft.joblib')\n",
     "dfts"
    ]
   },
@@ -344,7 +344,7 @@
     }
    ],
    "source": [
-    "ccs = isicle.io.load('ccs_mobility.joblib')\n",
+    "ccs = isicle.load('ccs_mobility.joblib')\n",
     "ccs"
    ]
   },
