--- a/docs/source/user_guide/NMR.ipynb
+++ b/docs/source/user_guide/NMR.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "import isicle\n",
     "\n",
-    "geom = isicle.io.load('dimethylglycine.mol')\n",
+    "geom = isicle.load('dimethylglycine.mol')\n",
     "geom = geom.initial_optimize(embed=True)\n",
     "\n",
     "geom.mol"
